@startuml Database Schema
!theme plain
skinparam backgroundColor #FFFFFF
skinparam entity {
    BackgroundColor #E3F2FD
    BorderColor #1976D2
}

title Notification Database Schema

package "notification schema" {
    
    entity "notifications" {
        * id : BIGINT
        --
        recipient_id : BIGINT
        sender_id : BIGINT
        notification_type : VARCHAR(50)
        entity_type : VARCHAR(50)
        entity_id : BIGINT
        title : VARCHAR(255)
        message : TEXT
        priority : VARCHAR(20)
        status : VARCHAR(20)
        created_at : TIMESTAMPTZ
    }
    
    entity "notification_templates" {
        * id : BIGINT
        --
        template_key : VARCHAR(100)
        title_template : VARCHAR(255)
        message_template : TEXT
        notification_type : VARCHAR(50)
        language : VARCHAR(10)
        is_active : BOOLEAN
        created_at : TIMESTAMPTZ
    }
    
    entity "workflow_definitions" {
        * id : BIGINT
        --
        entity_type : VARCHAR(50)
        workflow_name : VARCHAR(100)
        description : TEXT
        is_active : BOOLEAN
        created_at : TIMESTAMPTZ
    }
    
    entity "workflow_steps" {
        * id : BIGINT
        --
        workflow_id : BIGINT
        step_order : INTEGER
        step_name : VARCHAR(100)
        approver_role : VARCHAR(50)
        timeout_days : INTEGER
        created_at : TIMESTAMPTZ
    }
    
    entity "workflow_instances" {
        * id : BIGINT
        --
        workflow_id : BIGINT
        entity_type : VARCHAR(50)
        entity_id : BIGINT
        current_step : INTEGER
        status : VARCHAR(20)
        initiated_by : BIGINT
        created_at : TIMESTAMPTZ
    }
    
    entity "approval_records" {
        * id : BIGINT
        --
        workflow_instance_id : BIGINT
        step_id : BIGINT
        approver_id : BIGINT
        action : VARCHAR(20)
        comments : TEXT
        approved_at : TIMESTAMPTZ
    }
}

package "auth schema" {
    entity "users" {
        * id : BIGINT
        --
        username : VARCHAR(64)
        email : VARCHAR(255)
        full_name : VARCHAR(255)
        status : VARCHAR(16)
        created_at : TIMESTAMPTZ
    }
}

' Relationships
notifications }o--|| users : "recipient"
notifications }o--o| users : "sender"
workflow_definitions ||--o{ workflow_steps : "1:N"
workflow_definitions ||--o{ workflow_instances : "1:N"
workflow_instances ||--o{ approval_records : "1:N"
workflow_steps ||--o{ approval_records : "1:N"
workflow_instances }o--|| users : "initiator"
approval_records }o--|| users : "approver"

note right of notifications
  Status: unread, read, archived
  Priority: low, medium, high, urgent
end note

note right of workflow_instances
  Status: active, completed, rejected
end note

note right of approval_records
  Action: approve, reject, request_changes
end note

@enduml
